trunk/Archive2/f1/74d030ab6b754a/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:4:5: error: ‘count’ is not a member of ‘std’
     std::count << u8"\u26BD";
     ^
