trunk/Archive2/f1/74d030ab6b754a/main.cpp
#include <iostream>

int main() {
    std::count << u8"\u26BD";
}
